# Langchain-Semantic-Chunking-Arena

./: .gitignore  Dockerfile  README.md  README_converted.tex  backup.json  docker-compose.yml  ecommerce.py  history.py  legal.py  paper.md  pyproject.toml  requirements.txt
config/: data_loader_config.json  ground_truths.json
data/processed/ecommerce/: openalex_37.txt  openalex_61.txt  openalex_74.txt
data/processed/history/: openalex_59.txt  openalex_75.txt
data/processed/legal/: openalex_20.txt  openalex_21.txt  openalex_36.txt  openalex_48.txt  openalex_6.txt  openalex_70.txt  openalex_78.txt  openalex_82.txt  openalex_87.txt  openalex_90.txt  openalex_96.txt  openalex_97.txt
data/processed/medical/: pubmed_0.txt  pubmed_12.txt  pubmed_14.txt  pubmed_16.txt  pubmed_17.txt  pubmed_19.txt  pubmed_2.txt  pubmed_21.txt  pubmed_22.txt  pubmed_23.txt  pubmed_28.txt  pubmed_29.txt  pubmed_30.txt  pubmed_31.txt  pubmed_33.txt  pubmed_34.txt  pubmed_35.txt  pubmed_4.txt  (+29 more)
results/: chunk_sizes_metrics.json  retrieval_quality_metrics.json  scores.json
src/: main.py
src/chunking_methods/: __init__.py  gradient.py  interquartile.py  percentile.py  std_deviation.py
src/evaluation/: __init__.py  chunk_size_evaluator.py  retrieval_quality_evaluator.py  scoring_system.py
src/utils/: __init__.py  data_loader.py  ground_truth_creator.py  helpers.py  preprocessor.py  recalculate_scores.py
src/visualization/: benchmarking_flowchart  combine_distributions.py  comparison.py  flowchart.py
tests/: test_chunking_methods.py  test_evaluation.py  test_scoring_system.py
(+41296 files in other folders)
